Prevent icon flickering during carousel initialization

--- a/web/css/layout/_pagebuilder.less
+++ b/web/css/layout/_pagebuilder.less
@@ -192,7 +192,7 @@
         --base-bg-alpha: .7;
         background-color: @slider-arrow__background-color;
         .lib-css(border, @slider-arrow__border);
-        display: flex;
+        display: none;
         gap: 0;
         align-items: center;
         justify-content: center;
@@ -200,6 +200,10 @@
         line-height: 0 !important;
         padding: 0;
         border-radius: 0;
+
+        .slick-initialized {
+            display: flex;
+        }
 
         &::before {
             content: '';
